--- a/src/resolutions/Resolutions.mobile.css
+++ b/src/resolutions/Resolutions.mobile.css
@@ -162,7 +162,7 @@
 
   .habit-health-percentage {
     /* border: 1px solid var(--black); */
-    font-size: 16px;
+    font-size: 14px;
   }
 
   .calendar-title-text {
